test/modules/diten/usemodule/test_nested_use3.good
test_nested_use3.chpl:12: error: Cannot find module 'notmiddlemost'
